@@ -2,3 +2,4 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/java.util=ALL-UNNAMED
 --add-opens java.base/sun.misc=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
